# starsystem-ecs

./: Cargo.toml  rustfmt.toml
src/: lib.rs  uid.rs
src/starsystem/: being.rs  mod.rs
src/starsystem/ascend/: being.rs  component.rs  entity.rs  mod.rs
src/starsystem/starentity/: location.rs  mod.rs  property.rs
src/world/: component.rs  entity.rs  enum_index.rs  mod.rs
